@@ -93,14 +93,23 @@ Debug 1
 #        Lang Voice     Dialect
 #        ---- --------- ------------------------
 AddVoice "en" "male1"   "GeneralAmericanEnglish"
+AddVoice "en" "female1" "GeneralAmericanEnglish"
 AddVoice "en" "male2"   "BritishEnglish"
+AddVoice "en" "female2" "BritishEnglish"
 AddVoice "es" "male1"   "CastilianSpanish"
+AddVoice "es" "female1" "CastilianSpanish"
 AddVoice "es" "male2"   "MexicanSpanish"
+AddVoice "es" "female2" "MexicanSpanish"
 AddVoice "fr" "male1"   "StandardFrench"
+AddVoice "fr" "female1" "StandardFrench"
 AddVoice "fr" "male2"   "CanadianFrench"
+AddVoice "fr" "female2" "CanadianFrench"
 AddVoice "de" "male1"   "StandardGerman"
+AddVoice "de" "female1" "StandardGerman"
 AddVoice "it" "male1"   "StandardItalian"
+AddVoice "it" "female1" "StandardItalian"
 AddVoice "zh" "male1"   "MandarinChinese"
+AddVoice "zh" "female1" "MandarinChinese"
 AddVoice "zh" "male2"   "MandarinChineseGB"
 AddVoice "zh" "male3"   "MandarinChinesePinYin"
 AddVoice "" "male1"   "MandarinChineseUCS"
@@ -131,6 +140,33 @@ AddVoice "xx" "male1"   "StandardReserved"
 AddVoice "th" "male1"   "StandardThai"
 AddVoice "th" "male2"   "StandardThaiTIS"
 
+# -- VOICE PARAMETERS --
+
+# This table provides a mechanism for fine-tuning the voices used for synthesis.
+# The dialect is chosen by the table above, then adjusted according to these parameters.
+# The columns are:
+#   Voice Name   - See the Speech Dispatcher manual for standard voice names.
+#   M/F          - Gender.   0 = male. 1 = female.
+#   Br           - Breathiness.  0 to 100. 0 is usually used for males, 40 or 50 for females.
+#   Hd Sz        - Head Size.  0 to 100.
+#   Pitch Bas    - Pitch Baseline.  0 to 100.
+#   Pitch Flc    - Pitch Fluctuation.  0 to 100.
+#   Rough        - Roughness.  0 to 100
+#   Speed        - Rate.  0 to 100.
+
+# Volume is controlled via speechd.conf or SSIP commands.
+
+# Application RATE or PITCH commands are relative to the settings here.
+# For example, if Pitch Bas is 80 below, a PITCH command of -50 would set the
+# pitch baseline to halfway between 80 and 0, or 40.
+
+# All columns must be provided.
+
+#                                             Hd  -Pitch-
+#                      Voice Name     M/F Br  Sz  Bas Flc Rough Speed
+#                      -------------- --- --- --- --- --- ---   ---
+#IbmttsVoiceParameters "male1"          0   0  50  65  30   0    50
+#IbmttsVoiceParameters "female1"        1  50  50  81  30   0    50
 
 # -- DIALECTS --
 # Do not change these unless you know what you are doing.
